Modified website name

--- a/resume/index.html
+++ b/resume/index.html
@@ -139,7 +139,7 @@
             <div class="pad">
                 <h2>Menu</h2>
                 <ul>
-                    <li><a href="../website.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="../resume/index.html">Resum&eacute;</a></li>
                     <li><a href="https://www.linkedin.com/in/elizabethmaquino/"> LinkedIn Profile</a></p></li>
                 </ul>
