--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="pad">
                 <h2>Menu</h2>
                 <ul>
-                    <li><a href="./website">Home</a></li>
+                    <li><a href="./index">Home</a></li>
                     <li><a href="./resume/index.html">Resum&eacute;</a></li>
                     <li><a href="https://www.linkedin.com/in/elizabethmaquino/"> LinkedIn Profile</a></p></li>
                 </ul>
